# StreamIntel360-AI

./: .gitignore  COPYRIGHT.txt  Dockerfile  README.md  pyproject.toml  requirements-backend.txt  requirements-notebooks.txt  requirements.txt
backend/: Dockerfile  requirements.txt
backend/app/: config.py  main.py  schemas.py
backend/app/agents/: audience_fit.py  competitive.py  content_scout.py  executive_summary.py  graph.py  tools.py
backend/app/rag/: __init__.py  ingest.py  retriever.py  vectorstore.py
backend/app/routes/: admin.py  analyze.py  chat.py
backend/app/utils/: logging.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/analyze/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/components/: AnalysisCard.tsx  ChatUI.tsx  MetricsGrid.tsx
models/: imdb_sentiment_pipeline.joblib
notebooks/: 01_data_exploration.ipynb  02_embedding_experiments.ipynb  03_sentiment_model.ipynb  04_rag_agent_evaluation.ipynb
