[tool.poetry]
name = "streamintel360"
version = "0.1.0"
description = "Multi-agent content intelligence platform for streaming strategy."
authors = ["Sweety Seelam <you@example.com>"]
readme = "README.md"
packages = [{ include = "backend" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

fastapi = "0.110.1"
uvicorn = {extras = ["standard"], version = "0.29.0"}

langchain = "0.2.10"
langchain-openai = "0.1.7"
langgraph = "0.0.63"

pydantic = "2.7.1"
pydantic-settings = "2.2.1"
python-dotenv = "1.0.1"

sentence-transformers = "2.7.0"
faiss-cpu = "1.8.0"

numpy = "1.26.4"
pandas = "2.2.2"

[tool.poetry.group.notebooks.dependencies]
matplotlib = "3.8.4"
seaborn = "0.13.2"
scikit-learn = "1.4.2"
joblib = "1.4.2"
notebook = "7.1.2"
jupyterlab = "4.1.6"
ipykernel = "6.29.4"

[tool.poetry.scripts]
streamintel360-backend = "backend.app.main:app"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"